2003-10-04  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentFragment.cs,
	  XmlElement.cs,
	  XmlEntityReference.cs : Removed extraneous MonoTODO.
	* XmlNode.cs : Implemented Normalize().
	* XmlNodeReader.cs :
	  - AttributeCount and HasAttributes should return its owner element's
	    value, to be consistent with XmlTextReader.
	  - Fixed Depth to reflect correct attribute/attribute-value iteration.
	  - simplified ownerElement and HasValue.
	  - Prefix won't return null.
	  - MoveToElement() should also work against attribute value nodes.
	* XmlTextReader.cs : MoveToElement() should return false if it is
	  positioned at element itself.

2003-10-04  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlTextReader.cs : Improved SignificantWhitespace handling.

2003-10-01  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlSecureResolver.cs : Implemented basic feature.

2003-10-01  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlUrlResolver.cs : Should work with null type argument.

2003-10-01  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlTextWriter.cs : An attribute can require a prefix for the default
	  namespace, so we need to store the prefix as well as the namespace.

2003-09-30  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTDValidatingReader.cs : Simplified to use 
	  XmlSchemaUtil.GetParserContext().
	* XmlValidatingReader.cs : ValidationType.Auto should always use
	  XsdValidatingReader because xsi:schemaLocation might be used.

2003-09-30  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlTextReader.cs : Attribute value token properties were incorrectly
	  set by the linked node.

2003-09-26  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentNavigator.cs : Fix for bugzilla #48931. MoveToRoot() now
	  considers such case that target node was not adapted to the document.
	* XmlNamespaceManager.cs : GetEnumerator() missed the last pair.
	* XmlTextWriter.cs : use 'as'  instead of 'try..catch'.

2003-09-25 Ben Maurer  <bmaurer@users.sourceforge.net>
